--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Электромонтаж в Ярославле</title>
     <link rel="stylesheet" href="/css/main.css">
     <script src="/libs/gsap.min.js" defer></script>
     <script src="/libs/ScrollTrigger.min.js" defer></script>
