Added new styles & feedback form

--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
                         </div>
                     </div>
                 </section>
+                <section class="feedback">
+                    <h2 class="feedback-h">Оставьте заявку на <span class="feedback-h__accent">бесплатную</span> консультацию. Перезвоним в течение 5 минут!</h2>
+                    <form class="feedback-form" action="POST" method="">
+                        <input class="feedback-form__input" name="name" type="text" placeholder="Ваше имя">
+                        <input type="tel" name="phone" placeholder="Ваш телефон">
+                        <textarea name="Message" placeholder="Ваш вопрос"></textarea>
+                        <button>Отправить</button>
+                    </form>
+                </section>
             </main>
         </div>
     </div>
