Fixed img paths

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
                             <div class="pricelist__left">
-                                <img class="pricelist__item" src="img/works/1.png" alt="work1">
+                                <img class="pricelist__item" src="./img/works/1.png" alt="work1">
                                 <div class="text-block pricelist__item">
                                     <h2 class="text-block__h">Установка розетки - <span>от 200р/шт</span></h2>
                                     <p class="text-block__p">Подключаем удобство к вашим потребностям! Надежная
@@ -53,7 +53,7 @@
                                         ваши планы по размещению электрооборудования. Доверьте нам заботу о вашем
                                         электрическом комфорте!</p>
                                 </div>
-                                <img class="pricelist__item" src="img/works/3.png" alt="work3">
+                                <img class="pricelist__item" src="./img/works/3.png" alt="work3">
                                 <div class="text-block pricelist__item">
                                     <h2 class="text-block__h">Перенос выключателя или розетки - <span>от 200р/шт</span>
                                     </h2>
@@ -63,7 +63,7 @@
                                         обеспечивая идеальную функциональность и эстетику. Ваша электросеть – по вашему
                                         сценарию!</p>
                                 </div>
-                                <img class="pricelist__item" src="img/works/5.png" alt="work5">
+                                <img class="pricelist__item" src="./img/works/5.png" alt="work5">
                                 <div class="text-block pricelist__item">
                                     <h2 class="text-block__h">Установка люстры - <span>от 400р/шт</span></h2>
                                     <p class="text-block__p">Воплощаем световые идеи в реальность! Профессиональная
@@ -72,7 +72,7 @@
                                         атмосферу света и уюта в вашем пространстве. Поверьте световому дизайну
                                         профессионалов!</p>
                                 </div>
-                                <img class="pricelist__item" src="img/works/7.png" alt="work7">
+                                <img class="pricelist__item" src="./img/works/7.png" alt="work7">
                                 <div class="text-block pricelist__item">
                                     <h2 class="text-block__h">Устранение обрыва, короткого замыкания - <span>от
                                             490р/шт</span></h2>
@@ -82,7 +82,7 @@
                                         безопасность и нормальную работу вашей электросети. Доверьте нам заботу о
                                         стабильности в ваших электрических потоках!</p>
                                 </div>
-                                <img class="pricelist__item" src="img/works/9.png" alt="work9">
+                                <img class="pricelist__item" src="./img/works/9.png" alt="work9">
                             </div>
 
 
@@ -99,7 +99,7 @@
                                         электромонтажным инженерам. Доверьте замеры профессионалам и убедитесь в
                                         качестве наших услуг!</p>
                                 </div>
-                                <img class="pricelist__item" src="img/works/2.png" alt="work2">
+                                <img class="pricelist__item" src="./img/works/2.png" alt="work2">
                                 <div class="text-block pricelist__item">
                                     <h2 class="text-block__h">Монтаж выключателя - <span>от 220р/шт</span></h2>
                                     <p class="text-block__p">Переключите удобство на новый уровень! Профессиональный
@@ -108,7 +108,7 @@
                                         ваших потребностей. Доверьте нам заботу о правильном функционировании вашей
                                         электросети – ваш контроль всегда под рукой!</p>
                                 </div>
-                                <img class="pricelist__item" src="img/works/4.png" alt="work4">
+                                <img class="pricelist__item" src="./img/works/4.png" alt="work4">
                                 <div class="text-block pricelist__item">
                                     <h2 class="text-block__h">Монтаж розетки под электроплиту - <span>от 390р/шт</span>
                                     </h2>
@@ -118,7 +118,7 @@
                                         и эффективной работе плиты, создавая удобное и функциональное пространство для
                                         приготовления пищи. Полный контроль над готовкой благодаря нашему опыту!</p>
                                 </div>
-                                <img class="pricelist__item" src="img/works/6.png" alt="work6">
+                                <img class="pricelist__item" src="./img/works/6.png" alt="work6">
                                 <div class="text-block pricelist__item">
                                     <h2 class="text-block__h">Установка точечного светильника - <span>от 190р/шт</span>
                                     </h2>
@@ -128,7 +128,7 @@
                                         и функциональность вашего пространства. Ваш дизайн оживает с нашими световыми
                                         акцентами!</p>
                                 </div>
-                                <img class="pricelist__item" src="img/works/8.png" alt="work8">
+                                <img class="pricelist__item" src="./img/works/8.png" alt="work8">
                                 <div class="text-block pricelist__item">
                                     <h2 class="text-block__h">Установка электросчетчика - <span>от 400р/шт</span></h2>
                                     <p class="text-block__p">Контроль в ваших руках! Профессиональная установка
