Added new styles

--- a/index.html
+++ b/index.html
@@ -154,44 +154,69 @@
                     </form>
                 </section>
                 <section class="faq">
-                    <h2>Как мы работаем</h2>
+                    <h2 class="faq-h">Как мы работаем</h2>
                     <div class="faq__container">
                         <div class="faq-step">
-                            <span>1</span>
+                            <span class="faq-step__number">1</span>
                             <p class="faq-step__p">Вы звоните или оставляете заявку</p>
                         </div>
                         <div class="faq-step">
-                            <span>2</span>
+                            <span class="faq-step__number">2</span>
                             <p class="faq-step__p">Мы уточняем удобное для вас время</p>
                         </div>
                         <div class="faq-step">
-                            <span>3</span>
+                            <span class="faq-step__number">3</span>
                             <p class="faq-step__p">Мастер приезжает и выполняет заказ</p>
                         </div>
                         <div class="faq-step">
-                            <span>4</span>
+                            <span class="faq-step__number">4</span>
                             <p class="faq-step__p">Сдаёт готовый результат и даёт гарантию!</p>
                         </div>
                     </div>
                 </section>
                 <section class="samples">
-                    <h2>Примеры наших работ</h2>
+                    <h2 class="samples-h">Примеры наших работ</h2>
                     <div class="samples-container swiper">
                         <div class="swiper-wrapper">
                             <div class="samples-card swiper-slide">
-                                <img src="./img/samples/1.jpeg" alt="">
-                                <p></p>
+                                <img class="samples-card__i" src="./img/samples/1.jpeg" alt="">
                             </div>
                             <div class="samples-card swiper-slide">
-                                <img src="./img/samples/2.jpg" alt="">
-                                <p></p>
+                                <img class="samples-card__i" src="./img/samples/2.jpg" alt="">
                             </div>
                             <div class="samples-card swiper-slide">
-                                <img src="./img/samples/3.webp" alt="">
-                                <p></p>
+                                <img class="samples-card__i" src="./img/samples/3.webp" alt="">
                             </div>
                             <div class="samples-card swiper-slide">
-                                <img src="./img/samples/4.webp" alt="">
+                                <img class="samples-card__i" src="./img/samples/4.webp" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="reviews">
+                    <h2 class="reviews-h">Отзывы некоторых наших клиентов</h2>
+                    <div class="reviews-container">
+                        <div class="reviews-card">
+                            <img src="" alt="" class="reviews-card__i">
+                            <div class="reviews-card__content">
+                                <h4></h4>
+                                <h6></h6>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="reviews-card">
+                            <img src="" alt="" class="reviews-card__i">
+                            <div class="reviews-card__content">
+                                <h4></h4>
+                                <h6></h6>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="reviews-card">
+                            <img src="" alt="" class="reviews-card__i">
+                            <div class="reviews-card__content">
+                                <h4></h4>
+                                <h6></h6>
                                 <p></p>
                             </div>
                         </div>
