Added new sections

--- a/index.html
+++ b/index.html
@@ -197,27 +197,27 @@
                     <h2 class="reviews-h">Отзывы некоторых наших клиентов</h2>
                     <div class="reviews-container">
                         <div class="reviews-card">
-                            <img src="" alt="" class="reviews-card__i">
+                            <img src="./img/reviews/1.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
-                                <h4></h4>
-                                <h6></h6>
-                                <p></p>
+                                <h4>Антон Кащенко</h4>
+                                <h6>Перенос розеток и выключателей</h6>
+                                <p>Обращались к специалистам по электрике во время ремонта квартиры. Необходимо было перенести розетки и выключатели, а также установить точечное освещение. Очень порадовало, что мастера оказались вежливыми и профессиональными. Все работы выполнили оперативно, уложившись всего в несколько часов. Цены вполне приемлемые, на сайте есть прейскурант, так что еще до прихода специалистов мы знали примерную стоимость услуг.</p>
                             </div>
                         </div>
                         <div class="reviews-card">
-                            <img src="" alt="" class="reviews-card__i">
+                            <img src="./img/reviews/2.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
-                                <h4></h4>
-                                <h6></h6>
-                                <p></p>
+                                <h4>Дмитрий Павленко</h4>
+                                <h6>Дежурное освещение в подвале ТЦ</h6>
+                                <p>Для нас устанавливали автономное дежурное освещение в подвале торгового центра. Специалисты быстро откликнулись на заявку. Задача была непростая — организовать освещение с нуля в условиях многочисленных дефектов. Работу выполнили на высоком уровне: качественно, продуманно и добросовестно. Все материалы ребята приобрели самостоятельно, стоимость работ и материалов оказалась честной и обоснованной. Результатом доволен, рекомендую!</p>
                             </div>
                         </div>
                         <div class="reviews-card">
-                            <img src="" alt="" class="reviews-card__i">
+                            <img src="./img/reviews/3.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
-                                <h4></h4>
-                                <h6></h6>
-                                <p></p>
+                                <h4>Мария Кузнецова</h4>
+                                <h6>Частичная замена проводки</h6>
+                                <p>Мастеру нужно было решить три задачи по модернизации старой проводки, и все было выполнено точно по плану. На месте специалист предложил более удобное и рациональное решение, что оказалось очень полезным. Приехал вовремя, с полным комплектом инструментов, включая пылесос для уборки после работ, что добавило плюсов к общему впечатлению. Обязательно порекомендую эту компанию знакомым!</p>
                             </div>
                         </div>
                     </div>
