--- a/index.html
+++ b/index.html
@@ -199,30 +199,40 @@
                         <div class="reviews-card">
                             <img src="./img/reviews/1.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
-                                <h4>Антон Кащенко</h4>
-                                <h6>Перенос розеток и выключателей</h6>
+                                <h3>Антон Кащенко</h3>
+                                <h4>Перенос розеток и выключателей</h4>
                                 <p>Обращались к специалистам по электрике во время ремонта квартиры. Необходимо было перенести розетки и выключатели, а также установить точечное освещение. Очень порадовало, что мастера оказались вежливыми и профессиональными. Все работы выполнили оперативно, уложившись всего в несколько часов. Цены вполне приемлемые, на сайте есть прейскурант, так что еще до прихода специалистов мы знали примерную стоимость услуг.</p>
                             </div>
                         </div>
                         <div class="reviews-card">
                             <img src="./img/reviews/2.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
-                                <h4>Дмитрий Павленко</h4>
-                                <h6>Дежурное освещение в подвале ТЦ</h6>
+                                <h3>Дмитрий Павленко</h3>
+                                <h4>Дежурное освещение в подвале ТЦ</h4>
                                 <p>Для нас устанавливали автономное дежурное освещение в подвале торгового центра. Специалисты быстро откликнулись на заявку. Задача была непростая — организовать освещение с нуля в условиях многочисленных дефектов. Работу выполнили на высоком уровне: качественно, продуманно и добросовестно. Все материалы ребята приобрели самостоятельно, стоимость работ и материалов оказалась честной и обоснованной. Результатом доволен, рекомендую!</p>
                             </div>
                         </div>
                         <div class="reviews-card">
                             <img src="./img/reviews/3.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
-                                <h4>Мария Кузнецова</h4>
-                                <h6>Частичная замена проводки</h6>
+                                <h3>Мария Кузнецова</h3>
+                                <h4>Частичная замена проводки</h4>
                                 <p>Мастеру нужно было решить три задачи по модернизации старой проводки, и все было выполнено точно по плану. На месте специалист предложил более удобное и рациональное решение, что оказалось очень полезным. Приехал вовремя, с полным комплектом инструментов, включая пылесос для уборки после работ, что добавило плюсов к общему впечатлению. Обязательно порекомендую эту компанию знакомым!</p>
                             </div>
                         </div>
                     </div>
                 </section>
             </main>
+            <footer class="footer">
+                <h2 class="">Остались вопросы? Уточните их у наших специалистов. Оставьте заявку на <span class="">бесплатную</span>
+                    консультацию. Перезвоним в течение 5 минут!</h2>
+                <form class="" action="POST" method="">
+                    <input class="" name="name" type="text" placeholder="Ваше имя">
+                    <input type="tel" name="phone" placeholder="Ваш телефон">
+                    <textarea name="Message" placeholder="Ваш вопрос"></textarea>
+                    <button>Отправить</button>
+                </form>
+            </footer>
         </div>
     </div>
 </body>
