Added footer form

--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
             <footer class="footer">
                 <div class="footer-left">
                     <h2 class="footer-h">Остались вопросы? Уточните их у наших специалистов. Оставьте заявку на <span
-                            class="">бесплатную</span>
+                            class="footer-h__accent">бесплатную</span>
                         консультацию. Перезвоним в течение 5 минут!</h2>
-                    <form class="" action="POST" method="">
+                    <form class="footer-form" action="POST" method="">
                         <input class="" name="name" type="text" placeholder="Ваше имя">
                         <input type="tel" name="phone" placeholder="Ваш телефон">
                         <textarea name="Message" placeholder="Ваш вопрос"></textarea>
