--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                 </section>
-                <section data-speed=".6" class="feedback">
+                <section class="feedback">
                     <h2 class="feedback-h">Оставьте заявку на <span class="feedback-h__accent">бесплатную</span>
                         консультацию. Перезвоним в течение 5 минут!</h2>
                     <form class="feedback-form" action="POST" method="">
