--- a/index.html
+++ b/index.html
@@ -156,25 +156,21 @@
                 <section class="faq">
                     <h2 class="faq-h">Как мы работаем</h2>
                     <div class="faq__container">
-                        <div class="faq-step__left">
-                            <div class="faq-step">
-                                <span class="faq-step__number">1</span>
-                                <p class="faq-step__p">Вы звоните или оставляете заявку</p>
-                            </div>
-                            <div class="faq-step">
-                                <span class="faq-step__number">2</span>
-                                <p class="faq-step__p">Мы уточняем удобное для вас время</p>
-                            </div>
+                        <div class="faq-step faq-step__left">
+                            <span class="faq-step__number">1</span>
+                            <p class="faq-step__p">Вы звоните или оставляете заявку</p>
                         </div>
-                        <div class="faq-step__right">
-                            <div class="faq-step">
-                                <span class="faq-step__number">3</span>
-                                <p class="faq-step__p">Мастер приезжает и выполняет заказ</p>
-                            </div>
-                            <div class="faq-step">
-                                <span class="faq-step__number">4</span>
-                                <p class="faq-step__p">Сдаёт готовый результат и даёт гарантию!</p>
-                            </div>
+                        <div class="faq-step faq-step__right">
+                            <span class="faq-step__number">2</span>
+                            <p class="faq-step__p">Мы уточняем удобное для вас время</p>
+                        </div>
+                        <div class="faq-step faq-step__left">
+                            <span class="faq-step__number">3</span>
+                            <p class="faq-step__p">Мастер приезжает и выполняет заказ</p>
+                        </div>
+                        <div class="faq-step faq-step__right">
+                            <span class="faq-step__number">4</span>
+                            <p class="faq-step__p">Сдаёт готовый результат и даёт гарантию!</p>
                         </div>
                     </div>
                 </section>
