Added new samples anim

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Электромонтаж в Ярославле</title>
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <script src="./libs/gsap.min.js" defer></script>
     <script src="./libs/ScrollTrigger.min.js" defer></script>
     <script src="./libs/ScrollSmoother.min.js" defer></script>
-    <script src="./libs/swiper-bundle.min.js" defer></script>
     <script src="./js/app.js" defer></script>
 </head>
 
@@ -176,18 +174,18 @@
                 </section>
                 <section class="samples">
                     <h2 class="samples-h">Примеры наших работ</h2>
-                    <div class="samples-container swiper">
-                        <div class="swiper-wrapper">
-                            <div class="samples-card swiper-slide">
+                    <div class="samples-container">
+                        <div class="samples-track">
+                            <div class="samples-card">
                                 <img class="samples-card__i" src="./img/samples/1.jpeg" alt="">
                             </div>
-                            <div class="samples-card swiper-slide">
+                            <div class="samples-card">
                                 <img class="samples-card__i" src="./img/samples/2.jpg" alt="">
                             </div>
-                            <div class="samples-card swiper-slide">
+                            <div class="samples-card">
                                 <img class="samples-card__i" src="./img/samples/3.webp" alt="">
                             </div>
-                            <div class="samples-card swiper-slide">
+                            <div class="samples-card">
                                 <img class="samples-card__i" src="./img/samples/4.webp" alt="">
                             </div>
                         </div>
