Added reviews section anim

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                 <section class="reviews">
                     <h2 class="reviews-h">Отзывы некоторых наших клиентов</h2>
                     <div class="reviews-container">
+                        <div class="reviews-border__left"></div>
                         <div class="reviews-card">
                             <img src="./img/reviews/1.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
@@ -232,6 +233,7 @@
                                     впечатлению. Обязательно порекомендую эту компанию знакомым!</p>
                             </div>
                         </div>
+                        <div class="reviews-border__right"></div>
                     </div>
                 </section>
             </main>
