Added footer anim

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     </div>
                 </section>
             </main>
-            <footer class="footer">
+            <footer data-speed="1.5" class="footer">
                 <div class="footer-left">
                     <h2 class="footer-h">Остались вопросы? Уточните их у наших специалистов. Оставьте заявку на <span
                             class="footer-h__accent">бесплатную</span>
