--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                         <div class="reviews-card">
                             <img src="./img/reviews/1.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
-                                <h3>Антон Кащенко</h3>
-                                <h4>Перенос розеток и выключателей</h4>
+                                <h3 class="reviews-card__person">Антон Кащенко</h3>
+                                <h4 class="reviews-card__task">Перенос розеток и выключателей</h4>
                                 <p>Обращались к специалистам по электрике во время ремонта квартиры. Необходимо было
                                     перенести розетки и выключатели, а также установить точечное освещение. Очень
                                     порадовало, что мастера оказались вежливыми и профессиональными. Все работы
@@ -208,8 +208,8 @@
                         <div class="reviews-card">
                             <img src="./img/reviews/2.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
-                                <h3>Дмитрий Павленко</h3>
-                                <h4>Дежурное освещение в подвале ТЦ</h4>
+                                <h3 class="reviews-card__person">Дмитрий Павленко</h3>
+                                <h4 class="reviews-card__task">Дежурное освещение в подвале ТЦ</h4>
                                 <p>Для нас устанавливали автономное дежурное освещение в подвале торгового центра.
                                     Специалисты быстро откликнулись на заявку. Задача была непростая — организовать
                                     освещение с нуля в условиях многочисленных дефектов. Работу выполнили на высоком
@@ -221,8 +221,8 @@
                         <div class="reviews-card">
                             <img src="./img/reviews/3.jpg" alt="" class="reviews-card__i">
                             <div class="reviews-card__content">
-                                <h3>Мария Кузнецова</h3>
-                                <h4>Частичная замена проводки</h4>
+                                <h3 class="reviews-card__person">Мария Кузнецова</h3>
+                                <h4 class="reviews-card__task">Частичная замена проводки</h4>
                                 <p>Мастеру нужно было решить три задачи по модернизации старой проводки, и все было
                                     выполнено точно по плану. На месте специалист предложил более удобное и рациональное
                                     решение, что оказалось очень полезным. Приехал вовремя, с полным комплектом
